[package]
name = "soundcloud"
authors = ["Mikkel Kroman <mk@uplink.io>"]
version = "0.1.0"
license = "MIT/Apache-2.0"
keywords = ["soundcloud", "http", "api", "client"]
repository = "https://github.com/mkroman/soundcloud"
description = "SoundCloud API implementation in Rust"
documentation = "https://mkroman.github.io/soundcloud/"

[dependencies]
env_logger = "0.3.3"
hyper = "0.9.4"
log = "0.3.6"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.2"
url = "1.0.0"

